--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -16,7 +16,8 @@
         android:background="@drawable/aboutus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible" />
 
     <Button
         android:id="@+id/LearnMore"
@@ -29,7 +30,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ChooseGame" />
+        app:layout_constraintTop_toBottomOf="@+id/ChooseGame"
+        tools:visibility="invisible" />
 
     <Button
         android:id="@+id/ReturnInSetting"
@@ -45,7 +47,8 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LearnMore"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:visibility="invisible" />
 
     <ImageView
         android:id="@+id/DialogueView"
@@ -60,33 +63,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/alertdialoguesmall" />
+        app:srcCompat="@drawable/alertdialoguesmall"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/TextAbout"
-        android:layout_width="181dp"
-        android:layout_height="117dp"
+        android:layout_width="239dp"
+        android:layout_height="137dp"
+        android:layout_marginEnd="12dp"
         android:background="@color/colorOfAlert"
         android:text="@string/AboutUs"
-        android:textColor="@color/colorOfTextAlert"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/Text"
-        app:layout_constraintEnd_toEndOf="@+id/Text" />
+        app:layout_constraintEnd_toEndOf="@+id/Text"
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/Text"
-        android:layout_width="181dp"
-        android:layout_height="117dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="230dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="64dp"
         android:background="@color/colorOfAlert"
         android:text="@string/LearnMoreMessage"
-        android:textColor="@color/colorOfTextAlert"
-        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/DialogueView"
-        app:layout_constraintTop_toTopOf="@+id/DialogueView" />
+        app:layout_constraintTop_toTopOf="@+id/DialogueView"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/cancelView"
