--- a/app/src/main/res/layout/activity_game2.xml
+++ b/app/src/main/res/layout/activity_game2.xml
@@ -177,7 +177,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        tools:visibility="gone">
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -188,7 +188,7 @@
             android:alpha="0.7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/alertdialoguesmall" />
+            app:srcCompat="@drawable/newest_dialog" />
 
         <TextView
             android:id="@+id/congratulation"
@@ -237,7 +237,7 @@
         android:layout_height="match_parent"
         android:background="@color/transparentBlack"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/dialogue"
