--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -63,7 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/alertdialoguesmall"
+        app:srcCompat="@drawable/newest_dialog"
         tools:visibility="visible" />
 
     <TextView
