--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -136,7 +136,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        tools:visibility="gone">
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -147,12 +147,12 @@
             android:alpha="0.7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/alertdialoguesmall" />
+            app:srcCompat="@drawable/newest_dialog" />
 
         <TextView
             android:id="@+id/congratulation"
-            android:layout_width="152dp"
-            android:layout_height="67dp"
+            android:layout_width="148dp"
+            android:layout_height="81dp"
             android:layout_marginStart="64dp"
             android:layout_marginTop="96dp"
             android:background="@color/colorOfAlert"
