--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -11,7 +11,7 @@
         android:layout_width="197dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/aboutus"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/learnmore"
+        app:layout_constraintBottom_toTopOf="@+id/ReturnInSetting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,16 +40,13 @@
         android:layout_width="197dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LearnMore"
-        app:layout_constraintVertical_bias="0.0"
         tools:visibility="invisible" />
 
     <ImageView
@@ -55,14 +54,16 @@
         android:layout_width="524dp"
         android:layout_height="300dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="8dp"
         android:alpha="0.65"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/newest_dialog"
         tools:visibility="visible" />
 
@@ -99,10 +100,10 @@
         android:id="@+id/cancelView"
         android:layout_width="33dp"
         android:layout_height="33dp"
-        android:layout_marginStart="400dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/DialogueView"
+        app:layout_constraintEnd_toEndOf="@+id/DialogueView"
         app:layout_constraintTop_toTopOf="@+id/DialogueView"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
