--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -8,10 +8,11 @@
     android:background="@drawable/gamebackgound">
 
     <LinearLayout
-        android:id="@+id/LayoutInStartGame"
+        android:id="@+id/LayoutInStartGame1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -45,9 +46,9 @@
         android:id="@+id/door"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="600dp"
         android:layout_marginTop="164dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/door1" />
 
@@ -55,7 +56,7 @@
         android:id="@+id/earth"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="176dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -65,8 +66,10 @@
         android:id="@+id/jupiter"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="316dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cute_jupiter" />
@@ -88,29 +91,29 @@
         android:id="@+id/minus"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="296dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/minus_1"
         android:onClick="minus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/jupiter"
+        app:layout_constraintTop_toBottomOf="@+id/plus" />
 
     <Button
         android:id="@+id/plus"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="296dp"
         android:background="@drawable/plus_1"
         android:onClick="plus"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/jupiter"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/Mass_text"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
@@ -125,10 +128,10 @@
         android:id="@+id/barrier_1"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="336dp"
-        app:layout_constraintEnd_toEndOf="@+id/dialogueView"
-        app:layout_constraintTop_toBottomOf="@+id/jupiter"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="@+id/jupiter"
+        app:layout_constraintTop_toTopOf="@+id/door"
         app:srcCompat="@drawable/barrier_1" />
 
     <android.support.constraint.ConstraintLayout
@@ -136,25 +139,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="436dp"
-            android:layout_height="298dp"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="160dp"
+            android:layout_width="429dp"
+            android:layout_height="314dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:alpha="0.7"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/newest_dialog" />
 
         <TextView
             android:id="@+id/congratulation"
-            android:layout_width="148dp"
-            android:layout_height="81dp"
-            android:layout_marginStart="64dp"
-            android:layout_marginTop="96dp"
+            android:layout_width="149dp"
+            android:layout_height="91dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="72dp"
             android:background="@color/colorOfAlert"
             android:text="@string/congratulationMessage"
             android:textColor="@android:color/white"
@@ -168,10 +175,12 @@
             android:layout_width="82dp"
             android:layout_height="33dp"
             android:layout_marginTop="36dp"
+            android:layout_marginBottom="96dp"
             android:alpha="1"
             android:background="@color/colorOfAlert"
             android:text="钻研地图"
             android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="@+id/nextLevel"
             app:layout_constraintTop_toBottomOf="@+id/nextLevel" />
 
@@ -180,8 +189,8 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="82dp"
             android:layout_height="33dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginStart="76dp"
+            android:layout_marginTop="96dp"
             android:background="#6574D4FF"
             android:text="继续旅程"
             android:textColor="@android:color/white"
@@ -196,7 +205,7 @@
         android:layout_height="match_parent"
         android:background="@color/transparentBlack"
         android:visibility="gone"
-        tools:visibility="invisible">
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/dialogue"
@@ -211,7 +220,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.808"
             app:srcCompat="@drawable/alertwarning" />
 
         <TextView
@@ -326,21 +334,20 @@
             android:id="@+id/Guide1"
             android:layout_width="187dp"
             android:layout_height="107dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="436dp"
+            android:layout_marginStart="108dp"
+            android:layout_marginTop="16dp"
             android:background="@color/colorOfAlert"
             android:fontFamily="@font/text_font"
             android:text="@string/guideString1"
             android:textColor="@color/colorOfTextAlert"
             android:textSize="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/guide2"
             android:layout_width="150dp"
             android:layout_height="57dp"
-            android:layout_marginStart="32dp"
             android:layout_marginTop="176dp"
             android:text="这是地球目前所在的位置，虚线即是地球目前的轨道"
             android:textColor="@android:color/white"
@@ -364,20 +371,22 @@
             android:id="@+id/guide4"
             android:layout_width="126dp"
             android:layout_height="57dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="192dp"
-            android:layout_marginEnd="304dp"
+            android:layout_marginEnd="8dp"
             android:text="不好！地球的轨道中出现了一个巨大的障碍物"
             android:textColor="@color/dangerosColor"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/guide5"
             android:layout_width="172dp"
             android:layout_height="134dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="104dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="80dp"
             android:text="@string/change_mass"
             android:textColor="@android:color/white"
             android:visibility="invisible"
@@ -401,6 +410,8 @@
             android:id="@+id/guide7"
             android:layout_width="187dp"
             android:layout_height="107dp"
+            android:layout_marginStart="108dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/text_font"
             android:text="指挥官，祝你好运，相信你一定可以带领地球重新找回希望"
@@ -408,7 +419,9 @@
             android:textSize="20dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/Guide1"
-            app:layout_constraintEnd_toEndOf="@+id/Guide1" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.25" />
 
         <ImageView
             android:id="@+id/arrow"
