--- a/app/src/main/res/layout/activity_start_game_animation.xml
+++ b/app/src/main/res/layout/activity_start_game_animation.xml
@@ -18,7 +18,7 @@
         android:fontFamily="@font/text_font"
         android:text="@string/TextSplash"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.905"
