--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -136,7 +136,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -212,7 +212,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.808"
-            app:srcCompat="@drawable/alertwarning" />
+            app:srcCompat="@drawable/redwarning" />
 
         <TextView
             android:id="@+id/textView3"
@@ -344,6 +344,7 @@
             android:layout_marginTop="176dp"
             android:text="这是地球目前所在的位置，虚线即是地球目前的轨道"
             android:textColor="@android:color/white"
+            android:textSize="14dp"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -356,6 +357,7 @@
             android:layout_marginEnd="44dp"
             android:text="这是地球的目的地"
             android:textColor="@android:color/white"
+            android:textSize="14dp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -368,6 +370,7 @@
             android:layout_marginEnd="304dp"
             android:text="不好！地球的轨道中出现了一个巨大的障碍物"
             android:textColor="@color/dangerosColor"
+            android:textSize="14dp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -380,6 +383,7 @@
             android:layout_marginEnd="104dp"
             android:text="@string/change_mass"
             android:textColor="@android:color/white"
+            android:textSize="14dp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -393,6 +397,7 @@
             android:layout_marginBottom="96dp"
             android:text="改好质量后，按此按钮\n让地球动起来吧！"
             android:textColor="@android:color/white"
+            android:textSize="14dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
