--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -79,7 +79,7 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/Text"
         app:layout_constraintEnd_toEndOf="@+id/Text"
-        tools:visibility="invisible" />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/Text"
@@ -93,8 +93,7 @@
         android:textSize="18dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/DialogueView"
-        app:layout_constraintTop_toTopOf="@+id/DialogueView"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="@+id/DialogueView" />
 
     <ImageView
         android:id="@+id/cancelView"
