--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -128,10 +128,10 @@
         android:id="@+id/barrier_1"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="169dp"
         app:layout_constraintStart_toStartOf="@+id/jupiter"
-        app:layout_constraintTop_toTopOf="@+id/door"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/barrier_1" />
 
     <android.support.constraint.ConstraintLayout
@@ -158,8 +158,8 @@
 
         <TextView
             android:id="@+id/congratulation"
-            android:layout_width="149dp"
-            android:layout_height="91dp"
+            android:layout_width="152dp"
+            android:layout_height="97dp"
             android:layout_marginStart="56dp"
             android:layout_marginTop="72dp"
             android:background="@color/colorOfAlert"
@@ -204,8 +204,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparentBlack"
-        android:visibility="gone"
-        tools:visibility="gone">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/dialogue"
@@ -225,7 +224,7 @@
         <TextView
             android:id="@+id/textView3"
             android:layout_width="182dp"
-            android:layout_height="130dp"
+            android:layout_height="140dp"
             android:layout_marginStart="76dp"
             android:layout_marginTop="72dp"
             android:background="@color/alertRed"
@@ -257,7 +256,7 @@
         <TextView
             android:id="@+id/Rlimit_text"
             android:layout_width="275dp"
-            android:layout_height="135dp"
+            android:layout_height="140dp"
             android:background="@color/colorOfAlert"
             android:fontFamily="sans-serif"
             android:text="          在天体力学中，一个大质量天体对一个小质量天体进行引力作用时，小质量天体可以被大质量天体引力撕裂的最大距离即为洛希极限。(摘自《百度百科》)\n\nTips : 地球流浪时，要注意控制好与星球之间的距离，不要小于洛希极限哦！"
@@ -269,8 +268,7 @@
             app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="@+id/dialogue"
             app:layout_constraintTop_toTopOf="@+id/dialogue"
-            app:layout_constraintVertical_bias="0.402"
-            tools:visibility="invisible" />
+            app:layout_constraintVertical_bias="0.402" />
 
         <Button
             android:id="@+id/R_limit"
@@ -314,7 +312,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <Button
             android:id="@+id/goOnButton"
@@ -347,7 +345,8 @@
         <TextView
             android:id="@+id/guide2"
             android:layout_width="150dp"
-            android:layout_height="57dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="176dp"
             android:text="这是地球目前所在的位置，虚线即是地球目前的轨道"
             android:textColor="@android:color/white"
@@ -359,9 +358,9 @@
         <TextView
             android:id="@+id/guide3"
             android:layout_width="127dp"
-            android:layout_height="29dp"
-            android:layout_marginTop="208dp"
-            android:layout_marginEnd="44dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginEnd="24dp"
             android:text="这是地球的目的地"
             android:textColor="@android:color/white"
             android:textSize="14dp"
@@ -371,8 +370,8 @@
 
         <TextView
             android:id="@+id/guide4"
-            android:layout_width="126dp"
-            android:layout_height="57dp"
+            android:layout_width="130dp"
+            android:layout_height="76dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="192dp"
             android:layout_marginEnd="8dp"
